--- a/C++Prime/10.md
+++ b/C++Prime/10.md
@@ -1,5 +1,5 @@
 #10-1-1.cpp
-'''cpp
+```cpp
 #include "10-1.h"
 #include <cstring>
 #include <iostream>
@@ -45,10 +45,10 @@ void Account::withdraw(long outCash)
     std::cout << "out: $" << outCash << '\n';
   }
 }
-'''
+```
 
 #10-1.cpp
-'''cpp
+```cpp
 #include <iostream>
 #include "10-1.h"
 
@@ -65,10 +65,10 @@ int main(void) {
 
   return 0;
 }
-'''
+```
 
 #10-1.h
-'''cpp
+```cpp
 #ifndef ACCOUNT_H_
 #define ACCOUNT_H_
 
@@ -86,4 +86,4 @@ public:
 };
 
 #endif // ! ACCOUNT_H_
-'''
+```
